--- a/src/DotNet/packages/repositories.config
+++ b/src/DotNet/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\SoftMemes.Napl\packages.config" />
   <repository path="..\SoftMemes.Napl.Serialization\packages.config" />
+  <repository path="..\SoftMemes.Napl.TestApp\packages.config" />
 </repositories>
