Initial POC support for converting from LINQ expressions

--- a/src/DotNet/SoftMemes.Napl/SoftMemes.Napl.fsproj
+++ b/src/DotNet/SoftMemes.Napl/SoftMemes.Napl.fsproj
@@ -42,6 +42,7 @@
     <Compile Include="Validator.fs" />
     <Compile Include="Compiler.fs" />
     <Compile Include="ExpressionBuilder.fs" />
+    <Compile Include="LinqExtensions.fs" />
     <Compile Include="Serializer.fs" />
     <Compile Include="PrettyPrinter.fs" />
     <None Include="packages.config" />
