--- a/src/DotNet/SoftMemes.Napl.Serialization.Proto/SoftMemes.Napl.Serialization.Proto.csproj
+++ b/src/DotNet/SoftMemes.Napl.Serialization.Proto/SoftMemes.Napl.Serialization.Proto.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>SoftMemes.Napl.Serialization</RootNamespace>
-    <AssemblyName>SoftMemes.Napl.Serialization</AssemblyName>
+    <AssemblyName>SoftMemes.Napl.Serialization.Proto</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
