--- a/src/DotNet/SoftMemes.Napl.Serialization/SoftMemes.Napl.Serialization.fsproj
+++ b/src/DotNet/SoftMemes.Napl.Serialization/SoftMemes.Napl.Serialization.fsproj
@@ -34,6 +34,7 @@
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <Import Project="$(MSBuildExtensionsPath32)\..\Microsoft F#\v4.0\Microsoft.FSharp.Targets" Condition=" Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
   <ItemGroup>
+    <Compile Include="Exceptions.fs" />
     <Compile Include="TypeSerializer.fs" />
     <Compile Include="OperatorSerializer.fs" />
     <Compile Include="ExpressionSerializer.fs" />
