--- a/src/DotNet/packages/repositories.config
+++ b/src/DotNet/packages/repositories.config
@@ -3,4 +3,5 @@
   <repository path="..\SoftMemes.Napl\packages.config" />
   <repository path="..\SoftMemes.Napl.Serialization\packages.config" />
   <repository path="..\SoftMemes.Napl.TestApp\packages.config" />
+  <repository path="..\SoftMemes.Napl.TestGenerator\packages.config" />
 </repositories>
