--- a/src/DotNet/SoftMemes.Napl.TestGenerator/SoftMemes.Napl.TestGenerator.csproj
+++ b/src/DotNet/SoftMemes.Napl.TestGenerator/SoftMemes.Napl.TestGenerator.csproj
@@ -49,11 +49,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="NaplExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestData.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SoftMemes.Napl.Compilation\SoftMemes.Napl.Compilation.fsproj">
+      <Project>{044DE991-C25B-4FA8-9A03-B1773C40EE36}</Project>
+      <Name>SoftMemes.Napl.Compilation</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SoftMemes.Napl.Serialization.Proto\SoftMemes.Napl.Serialization.Proto.csproj">
       <Project>{78AE1A08-DBE7-4E21-80C1-4700D049A891}</Project>
       <Name>SoftMemes.Napl.Serialization.Proto</Name>
