Working comformance test generation and execution! Tweaking compiler to generate lambdas even for atomic values.

--- a/src/DotNet/packages/repositories.config
+++ b/src/DotNet/packages/repositories.config
@@ -4,4 +4,5 @@
   <repository path="..\SoftMemes.Napl.Serialization\packages.config" />
   <repository path="..\SoftMemes.Napl.TestApp\packages.config" />
   <repository path="..\SoftMemes.Napl.TestGenerator\packages.config" />
+  <repository path="..\SoftMemes.Napl.ConformanceTests\packages.config" />
 </repositories>
