--- a/src/DotNet/SoftMemes.Napl.TestGenerator/SoftMemes.Napl.TestGenerator.csproj
+++ b/src/DotNet/SoftMemes.Napl.TestGenerator/SoftMemes.Napl.TestGenerator.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LinqExtensions.cs" />
     <Compile Include="NaplExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
